// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackInStockButton /> should render button if not subscribed 1`] = `
<BackInStockButton
  isSubscribed={false}
>
  <div>
    <button
      className="css-1drfu7y"
      type="button"
    >
      <Notification
        color="#fa5400"
      >
        <Icon
          className=""
          color="#fa5400"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb  common__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            style={
              Object {
                "fill": "#fa5400",
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </Notification>
      Get notified
    </button>
  </div>
</BackInStockButton>
`;

exports[`<BackInStockButton /> should render notification if subscribed 1`] = `
<BackInStockButton
  isSubscribed={true}
>
  <div>
    <Check
      color="#fa5400"
    >
      <Icon
        className=""
        color="#fa5400"
        content="<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>"
        size="inherit"
        viewBox="0 0 24 24"
      >
        <svg
          className="css-yys9hb  common__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>",
            }
          }
          style={
            Object {
              "fill": "#fa5400",
              "fontSize": "inherit",
            }
          }
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        />
      </Icon>
    </Check>
    We will notify you
  </div>
</BackInStockButton>
`;
